feat: implement deployment workflow, Dockerfile, and environment configurations for backend and frontend