@@ -21,6 +21,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -33,6 +35,9 @@ public class SecurityConfig {
 
 	@Value("${spring.security.oauth2.resourceserver.jwt.audiences}")
 	private String audience;
+
+	@Value("${cors.allowed-origins:http://localhost:4200}")
+	private String corsAllowedOrigins;
 
 	@Bean
 	public SecurityFilterChain filterChain(HttpSecurity http, JwtConverter jwtConverter) throws Exception {
@@ -74,9 +79,9 @@ public class SecurityConfig {
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOriginPatterns(List.of(
-				"http://localhost:4200",
-				"http://localhost:*"));
+		List<String> origins = new ArrayList<>(Arrays.asList(corsAllowedOrigins.split(",")));
+		origins.add("http://localhost:*");
+		configuration.setAllowedOriginPatterns(origins);
 		configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
 		configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
 		configuration.setExposedHeaders(List.of("Authorization"));
